# weather

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  tool.h  ui_mainwindow.h  weather.pro  weatherData.cpp  weatherData.h
